# docs/swagger.yaml
@@ -373,13 +373,13 @@ definitions:
         $ref: '#/definitions/Kurajj_internal_models.EventType'
       id:
         type: integer
-      receiverStatus:
-        $ref: '#/definitions/Kurajj_internal_models.TransactionStatus'
       reportURL:
         type: string
       responder:
         $ref: '#/definitions/Kurajj_internal_models.UserShortInfo'
       responderStatus:
+        $ref: '#/definitions/Kurajj_internal_models.TransactionStatus'
+      transactionStatus:
         $ref: '#/definitions/Kurajj_internal_models.TransactionStatus'
     type: object
   Kurajj_internal_models.TransactionStatus:
@@ -390,6 +390,7 @@ definitions:
     - interrupted
     - canceled
     - not_started
+    - accepted
     type: string
     x-enum-varnames:
     - InProcess
@@ -398,6 +399,7 @@ definitions:
     - Interrupted
     - Canceled
     - NotStarted
+    - Accepted
   Kurajj_internal_models.TransactionsExport:
     properties:
       transactions:
